tests/golden/6-numeric-literals-and-notations/invalid/common/bad-float-literal-1.yini
^ BadFloat
badFloat = 5.     # NOT a valid float literal
